all media queries set

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>BMW</title>
+        <title>BMW iX</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Open+Sans&family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Open+Sans&family=Roboto:wght@300;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
         <link rel="stylesheet" href="../src/style.css" />
     </head> 
@@ -21,94 +21,57 @@
         </div>
             <header>
                 <nav class="header-nav">
-                    <div class="hamburger-button">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 200 200">
-                              <g stroke-width="6.5" stroke-linecap="round">
-                                <path
-                                  d="M72 82.286h28.75"
-                                  fill="#009100"
-                                  fill-rule="evenodd"
-                                  stroke="#fff"
-                                />
-                                <path
-                                  d="M100.75 103.714l72.482-.143c.043 39.398-32.284 71.434-72.16 71.434-39.878 0-72.204-32.036-72.204-71.554"
-                                  fill="none"
-                                  stroke="#fff"
-                                />
-                                <path
-                                  d="M72 125.143h28.75"
-                                  fill="#009100"
-                                  fill-rule="evenodd"
-                                  stroke="#fff"
-                                />
-                                <path
-                                  d="M100.75 103.714l-71.908-.143c.026-39.638 32.352-71.674 72.23-71.674 39.876 0 72.203 32.036 72.203 71.554"
-                                  fill="none"
-                                  stroke="#fff"
-                                />
-                                <path
-                                  d="M100.75 82.286h28.75"
-                                  fill="#009100"
-                                  fill-rule="evenodd"
-                                  stroke="#fff"
-                                />
-                                <path
-                                  d="M100.75 125.143h28.75"
-                                  fill="#009100"
-                                  fill-rule="evenodd"
-                                  stroke="#fff"
-                                />
-                              </g>
-                            </svg>
+                    <div class="hamburger-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 200 200"> <g stroke-width="6.5" stroke-linecap="round"> <path d="M72 82.286h28.75" fill="#009100" fill-rule="evenodd" stroke="#fff" /> <path d="M100.75 103.714l72.482-.143c.043 39.398-32.284 71.434-72.16 71.434-39.878 0-72.204-32.036-72.204-71.554" fill="none" stroke="#fff" /> <path d="M72 125.143h28.75" fill="#009100" fill-rule="evenodd" stroke="#fff" /> <path d="M100.75 103.714l-71.908-.143c.026-39.638 32.352-71.674 72.23-71.674 39.876 0 72.203 32.036 72.203 71.554" fill="none" stroke="#fff" /> <path d="M100.75 82.286h28.75" fill="#009100" fill-rule="evenodd" stroke="#fff" /> <path d="M100.75 125.143h28.75" fill="#009100" fill-rule="evenodd" stroke="#fff" /> </g> </svg>
                       </div>
                     <div class="nav-mobile-overlay">
-                        <a class='nav-mobile-link' href='#main'>NOWE BMW iX</a>
-                        <a class='nav-mobile-link' href='#form-section'>UMÓW JAZDĘ PRÓBNĄ</a>
-                        <a class='nav-mobile-link' href='#gallery-section'>GALERIA</a>
-                        <a href='#form-section'>
+                        <a class="nav-mobile-link" href="#main">NOWE BMW iX</a>
+                        <a class="nav-mobile-link" href="#form-section">UMÓW JAZDĘ PRÓBNĄ</a>
+                        <a class="nav-mobile-link" href="#gallery-section">GALERIA</a>
+                        <a href="#form-section">
                             <button class="nav-mobile-btn">UMÓW JAZDĘ PRÓBNĄ</button>
                         </a>
                     </div>
-                    <div class='nav-left'>
+                    <div class="nav-left">
                         <div class="nav-left-top">
-                            <a class='nav-link' href='#main'>Nowe BMW iX</a>
-                            <a class='nav-link' href='#form-section'>Umów jazdę próbną</a>
+                            <a class="nav-link" href="#main">Nowe BMW iX</a>
+                            <a class="nav-link" href="#form-section">Umów jazdę próbną</a>
                         </div>  
                         <div class="nav-left-bottom">
                             <h4>Radość z jazdy</h4>
                         </div>
                     </div>
-                    <img class='logo' src='./images/bmw-logo.png' alt='bmw-logo'>
+                    <img class="logo" src="./images/bmw-logo.png" alt="bmw-logo">
                 </nav>
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide" id="slide1">
                                 <div class="swiper-slide-left">
-                                    <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
+                                    <img class="slider-bmw-logo" src="./images/bmw_i_logo.png" alt="bmw-i-logo">
                                     <h1>NOWE BMW iX</h1>
                                     <h4>PIONIER NOWEJ ERY</h4>
                                 </div>
-                                <a href='#form-section'>
+                                <a class="trial-link" href="#form-section">
                                     <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
                                 </a>
                         </div>
                         <div class="swiper-slide" id="slide2">
                             <div class="swiper-slide-left">
-                                <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
+                                <img class="slider-bmw-logo" src="./images/bmw_i_logo.png" alt="bmw-i-logo">
                                 <h1>NOWE BMW iX</h1>
                                 <h4>WYBRÓBUJ NASZ NAJNOWSZY MODEL</h1>
                             </div>
-                            <a href='#form-section'>
+                            <a class="trial-link" href="#form-section">
                                 <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
                             </a>
                         </div>
                         <div class="swiper-slide" id="slide3">
                             <div class="swiper-slide-left">
-                                <img class='slider-bmw-logo' src='./images/bmw_i_logo.png' alt='bmw-i-logo'>
+                                <img class="slider-bmw-logo" src="./images/bmw_i_logo.png" alt="bmw-i-logo">
                                 <h1>NOWE BMW iX</h1>
                                 <h4>JESZCZE DZIŚ UMÓW SIĘ NA JAZDĘ PRÓBNĄ.</h4>
                             </div>
-                            <a href='#form-section'>
+                            <a class="trial-link" href="#form-section">
                                 <button class="trial-btn">UMÓW JAZDĘ PRÓBNĄ</button>
                             </a>
                         </div>
@@ -122,7 +85,7 @@
                     <img class="bmw-info-img2" src="./images/info2.png" alt="bmw-two-cars"> 
                     <div class="bmw-info-box">
                         <div class="bmw-info-box-title">
-                            <img class='svg-el' src="./images/pump.svg" alt="gas-pump"><br>
+                            <img class="svg-el" src="./images/pump.svg" alt="gas-pump"><br>
                             <h3>FAKTY</h3>
                             <h3>O NOWYM BMW iX.</h3>
                         </div>
@@ -151,7 +114,7 @@
                 <section class="innovation-section reveal">
                     <div class="innovation-textarea">
                         <h2 class="innovation-textarea-title">
-                            <img class='svg-el' src="./images/car.svg" alt="car-grey"><br>
+                            <img class="svg-el" src="./images/car.svg" alt="car-grey"><br>
                             <h3>INNOWACYJNA</h3>
                             <h3>AERODYNAMIKA</h3>
                             <h3>BMW iX.</h3>
@@ -159,8 +122,8 @@
                         <p class="subtitle">BMW iX w każdym milimetrze swojej dynamicznej stylistyki wdraża zasadę „forma podąża za funkcją”.</p>
                         <p class="textarea">Widać to przede wszystkim po gładkiej karoserii ze zwężoną nadbudową kabiny i zredukowanymi fugami oraz po płaskim podwoziu. W połączeniu z zamkniętym przodem oraz dyfuzorem z tyłu i niezwykłymi detalami, takimi jak wpuszczane klamki czy zintegrowane z listwami szybowymi lusterka zewnętrzne, BMW iX osiąga doskonały współczynnik Cx wynoszący zaledwie 0,25. Dzięki temu łączy w sobie zasięg i wydajność z innowacyjną konstrukcją SAV-a.</p>
                     </div>
-                    <img class='innovation-img1' src="./images/innovation1.png" alt="silver-bmw">
-                    <img class='innovation-img2' src="./images/innovation2.png" alt="back-of-silver-bmw">
+                    <img class="innovation-img1" src="./images/innovation1.png" alt="silver-bmw">
+                    <img class="innovation-img2" src="./images/innovation2.png" alt="back-of-silver-bmw">
                 </section>
                 <section class="gallery-section reveal" id="gallery-section">
                     <div class="gallery-imgs"></div>
@@ -183,18 +146,17 @@
                             <button class="submit-btn">WYŚLIJ</button>
                         </form>
                     </div>
-                    
                 </section>
             </main>
             <footer>
                 <nav class="footer-nav">
-                    <p>Dołącz do nas</p>
+                    <p class="footer-title">Dołącz do nas</p>
                     <div>
-                        <a href=""><img class='social-icon' src="images/facebook.png" alt="facebook-logo"></a>
-                        <a href=""><img class='social-icon' src="images/instagram.png" alt="facebook-logo"></a>
-                        <a href=""><img class='social-icon' src="images/youtube.png" alt="youtube-logo"></a>
-                        <a href=""><img class='social-icon' src="images/linkedin.png" alt="linkedin-logo"></a>
-                        <a href=""><img class='social-icon' src="images/twitter.png" alt="twitter-logo"></a>
+                        <a href=""><img class="social-icon" src="images/facebook.png" alt="facebook-logo"></a>
+                        <a href=""><img class="social-icon" src="images/instagram.png" alt="facebook-logo"></a>
+                        <a href=""><img class="social-icon" src="images/youtube.png" alt="youtube-logo"></a>
+                        <a href=""><img class="social-icon" src="images/linkedin.png" alt="linkedin-logo"></a>
+                        <a href=""><img class="social-icon" src="images/twitter.png" alt="twitter-logo"></a>
                     </div>
                 </nav>
                 <div class="site-map">
