sup text created

--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
                 </section>
                 <section class="form-section reveal" id="form-section">
                     <div class="form-container">
-                        <h3>UMÓW JAZDĘ PRÓBNĄ</h3>
+                        <h3>UMÓW JAZDĘ PRÓBNĄ<sup>BMW ix</sup></h3>
                         <p class="subtitle">Zachęcamy do ograniczenia poruszania się i pozostania w domu.</p>
                         <p class="subtitle">Jeśli jednak jazda testowa okaże się niezbędna prosimy o wypełnienie poniższego formularza.</p>
                         <form class="form">
