--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 200 200"> <g stroke-width="6.5" stroke-linecap="round"> <path d="M72 82.286h28.75" fill="#009100" fill-rule="evenodd" stroke="#fff" /> <path d="M100.75 103.714l72.482-.143c.043 39.398-32.284 71.434-72.16 71.434-39.878 0-72.204-32.036-72.204-71.554" fill="none" stroke="#fff" /> <path d="M72 125.143h28.75" fill="#009100" fill-rule="evenodd" stroke="#fff" /> <path d="M100.75 103.714l-71.908-.143c.026-39.638 32.352-71.674 72.23-71.674 39.876 0 72.203 32.036 72.203 71.554" fill="none" stroke="#fff" /> <path d="M100.75 82.286h28.75" fill="#009100" fill-rule="evenodd" stroke="#fff" /> <path d="M100.75 125.143h28.75" fill="#009100" fill-rule="evenodd" stroke="#fff" /> </g> </svg>
                       </div>
                     <div class="nav-mobile-overlay">
-                        <a class="nav-mobile-link" href="#main">NOWE BMW iX</a>
-                        <a class="nav-mobile-link" href="#form-section">UMÓW JAZDĘ PRÓBNĄ</a>
-                        <a class="nav-mobile-link" href="#gallery-section">GALERIA</a>
+                        <a class="nav-mobile-link" id="facts-anchor" href="#main">NOWE BMW iX</a>
+                        <a class="nav-mobile-link" id="form-anchor" href="#form-section">UMÓW JAZDĘ PRÓBNĄ</a>
+                        <a class="nav-mobile-link" id="gallery-anchor" href="#gallery-section">GALERIA</a>
                         <a href="#form-section">
                             <button class="nav-mobile-btn">UMÓW JAZDĘ PRÓBNĄ</button>
                         </a>
@@ -130,7 +130,7 @@
                 </section>
                 <section class="form-section reveal" id="form-section">
                     <div class="form-container">
-                        <h3>UMÓW JAZDĘ PRÓBNĄ<sup>BMW ix</sup></h3>
+                        <h3>UMÓW JAZDĘ PRÓBNĄ<sup> BMW ix</sup></h3>
                         <p class="subtitle">Zachęcamy do ograniczenia poruszania się i pozostania w domu.</p>
                         <p class="subtitle">Jeśli jednak jazda testowa okaże się niezbędna prosimy o wypełnienie poniższego formularza.</p>
                         <form class="form">
